navigation z-index fix

--- a/Styles/global.css
+++ b/Styles/global.css
@@ -1,5 +1,6 @@
 #navbar-navElm{
     background-color: #f7ffd9 !important;
+    z-index: 1000!important;
 /*    https://stackoverflow.com/questions/43542922/how-to-avoid-bootstrap-css-overriding-the-custom-css*/
 }
 #header-headerElm{
